--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,15 +2,42 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org"
       xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
-    <title>Spring Security Example</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <meta charset="UTF-8">
+    <title>Login page</title>
 </head>
+
 <body>
-<h1>Welcome to my first Spring Boot app!</h1>
-<h1>Please log in</h1>
-
-<form th:action="@{/logout}" method="post">
-    <input type="submit" value="Log in">
-</form>
-
+<div class="d-flex justify-content-center">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="row mb-4"></div>
+            <div class="col-sm-3">
+                <h3 class="text-left mb-1">Please sign in</h3>
+            </div>
+            <form method="post" action="/process_login" id="index">
+                <div class="col-sm-3 mx-auto">
+                    <label for="username" class="form-label"></label>
+                    <input type="text" class="form-control" id="username" name="username" placeholder="Email address"
+                           required
+                           style="margin-bottom: -15px;" autofocus/>
+                </div>
+                <div class="col-sm-3 mb-2 mx-auto">
+                    <label for="password" class="form-label"></label>
+                    <input type="password" class="form-control" id="password" name="password" placeholder="Password"
+                           required/>
+                </div>
+                <div class="col-sm-3 mx-auto">
+                    <button type="submit" class="btn btn-primary btn-sm btn-block w-100" form="index">Sign in
+                    </button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+        crossorigin="anonymous"></script>
 </body>
 </html>
