--- a/src/main/resources/templates/updateuser.html
+++ b/src/main/resources/templates/updateuser.html
@@ -1,46 +1,113 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org"
+      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity">
 <head>
     <meta charset="UTF-8"/>
-    <title>Edit Users</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 </head>
+
+<nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #3C3F42">
+    <div class="container-fluid">
+        <div class="collapse navbar-collapse" id="navbarText">
+            <div class="p-3 mb-2 text-white col-10">
+                <span class="fw-bold" th:text="${user.getEmail()}"></span>
+                with roles:
+                <span th:each="role : ${user.roles}" th:text="${role.getRoleName().replace('ROLE_', ' ')}"></span>
+            </div>
+            <div class="navbar-nav ms-auto mb-2 mb-lg-0">
+                <a style="color: #808080" th:href="@{/logout}" class="nav-link">Logout</a>
+            </div>
+        </div>
+    </div>
+</nav>
+
 <body>
-<h2>Edit User</h2>
-<form th:method="post" th:action="@{/admin/saveEditUser}" th:object="${user}">
-    <input type="hidden" th:field="*{id}" th:value="${user.id}"/>
-    <table border="1">
-        <tr>
-            <th><label for="username">Enter User name</label></th>
-            <th><input type="text" th:field="*{username}" id="username"/></th>
-        </tr>
-        <tr>
-            <th><label for="password">Enter password</label></th>
-            <th><input type="text" th:field="*{password}" id="password"/></th>
-        </tr>
-        <tr>
-            <th><label for="name">Enter name</label></th>
-            <th><input type="text" th:field="*{name}" id="name"/></th>
-        </tr>
-        <tr>
-            <th><label for="surname">Enter surname</label></th>
-            <th><input type="text" th:field="*{surname}" id="surname"/></th>
-        </tr>
-        <tr>
-            <th><label for="email">Enter email</label></th>
-            <th><input type="text" th:field="*{email}" id="email"/></th>
-        </tr>
-        <tr>
-            <th><input type="submit" value="Ok"/></th>
-        </tr>
-        <label>Select roles:</label>
-        <span th:each="role : ${roles}">
-    <input type="checkbox" name="roles" th:value="${role.getId()}" th:checked="${user.roles.contains(role)}"/>
-    <label th:text="${role.getRoleName()}"></label>
-</span>
-    </table>
-</form>
-<form th:action="@{/logout}" th:method="POST">
-    <input type="submit" th:value="Logout">
-</form>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-2" style="padding: 15px 0 0;">
+            <ul class="nav nav-pills flex-column">
+                <li class="nav-item" sec:authorize="hasRole('ROLE_ADMIN')">
+                    <a class="nav-link active" aria-current="page" href="/admin/user">Admin</a>
+                </li>
+                <li class="nav-item" sec:authorize="hasRole('ROLE_USER')">
+                    <a class="nav-link" aria-current="page" th:href="@{/user}">User</a>
+                </li>
+            </ul>
+        </div>
+
+        <div class="col-10 bg-light" style="padding: 15px 15px 15px;">
+            <h1>Admin panel </h1>
+            <ul class="nav nav-tabs">
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/admin/user}">Users table</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="/admin/showAddNewUserForm">New user</a>
+                </li>
+            </ul>
+
+            <div class="col-10 bg-light" style="padding: 15px 15px 15px;">
+                <h3>Add new users </h3>
+                <form th:method="post" th:action="@{/admin/addUser}" th:object="${addUser}">
+                    <div class="mb-2 text-center">
+                        <label for="name" class="col-sm-6 col-form-label">First name</label>
+                        <div class="col-4 mx-auto d-flex">
+                            <input type="text" class="form-control" th:field="*{name}" id="name"
+                                   placeholder="First name">
+                        </div>
+                    </div>
+
+                    <div class="mb-2 text-center">
+                        <label for="lastName" class="col-sm-6 col-form-label">Last name</label>
+                        <div class="col-sm-4 mx-auto d-flex">
+                            <input type="text" class="form-control" th:field="*{surname}" id="lastName"
+                                   placeholder="Last name">
+                        </div>
+                    </div>
+
+                    <div class="mb-2 text-center">
+                        <label for="age" class="col-sm-6 col-form-label">Age</label>
+                        <div class="col-sm-4 mx-auto d-flex">
+                            <input type="text" class="form-control" th:field="*{age}" id="age"
+                                   placeholder="Age">
+                        </div>
+                    </div>
+
+                    <div class="mb-2 text-center">
+                        <label for="email" class="col-sm-6 col-form-label">Email</label>
+                        <div class="col-sm-4 mx-auto d-flex">
+                            <input type="text" class="form-control" th:field="*{email}" id="email" placeholder="Email">
+                        </div>
+                    </div>
+
+                    <div class="mb-2 text-center">
+                        <label for="password" class="col-sm-6 col-form-label">Password</label>
+                        <div class="col-sm-4 mx-auto d-flex">
+                            <input type="password" class="form-control" th:field="*{password}" id="password"
+                                   placeholder="Password">
+                        </div>
+                    </div>
+
+                    <div class="form-group text-center" multiple aria-label="multiple select">
+                        <label for="roles">Role</label>
+                        <div class="col-sm-4 mx-auto d-flex mb-2">
+                            <select class="form-select" id="roles" name="roles" multiple>
+                                <option th:each="role : ${roles}"
+                                        th:text="${role.getRoleName().replace('ROLE_', ' ')}"
+                                        th:value="${role.getId()}"
+                                        th:field="*{roles}"></option>
+                            </select>
+                        </div>
+                    </div>
+                    <button type="submit" class="btn btn-success mx-auto d-flex">Add new user</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+        crossorigin="anonymous"></script>
 </body>
 </html>
