--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -80,7 +80,8 @@
 
 
                         <td>
-                            <a class="btn btn-info text-white" data-bs-toggle="modal"
+                            <a class="btn" style="background-color: lightseagreen; color: aliceblue;"
+                               data-bs-toggle="modal"
                                th:href="${'#editModal'+ user.getId()}">Edit</a>
                             <div class="modal fade" th:id="${'editModal'+ user.getId()}" tabindex="-1"
                                  aria-labelledby="editModalLabel" aria-hidden="true">
