3-1-4-update2 1. Растянула таблицу по ширине экрана 2. Убрала вкладку админ со страницы юзера 3. Поле с возрастом сделала числовым 4. Удалила лишний класс из папки "security" 5. Убрала @Column(name = "id") 6. Поправила класс Role

--- a/src/main/resources/templates/adduser.html
+++ b/src/main/resources/templates/adduser.html
@@ -69,7 +69,7 @@
                     <div class="mb-2 text-center">
                         <label for="age" class="col-sm-6 col-form-label">Age</label>
                         <div class="col-sm-4 mx-auto d-flex">
-                            <input type="text" class="form-control" th:field="*{age}" id="age"
+                            <input type="number" class="form-control" th:field="*{age}" id="age"
                                    placeholder="Age">
                         </div>
                     </div>
