--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org"
-      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
+
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
@@ -16,7 +17,7 @@
             <div class="col-sm-3">
                 <h3 class="text-left mb-1">Please sign in</h3>
             </div>
-            <form method="post" action="/process_login" id="index">
+            <form method="post" action="/process_login" id="login-form">
                 <div class="col-sm-3 mx-auto">
                     <label for="username" class="form-label"></label>
                     <input type="text" class="form-control" id="username" name="username" placeholder="Email address"
@@ -29,7 +30,7 @@
                            required/>
                 </div>
                 <div class="col-sm-3 mx-auto">
-                    <button type="submit" class="btn btn-primary btn-sm btn-block w-100" form="index">Sign in
+                    <button type="submit" class="btn btn-primary btn-sm btn-block w-100" form="login-form">Sign in
                     </button>
                 </div>
             </form>
