--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org"
+      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity">
 <head>
     <title>User page</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -11,9 +11,9 @@
     <div class="container-fluid">
         <div class="collapse navbar-collapse" id="navbarText">
             <div class="p-3 mb-2 text-white col-10">
-                <span class="fw-bold" th:text="${user.getEmail()}"></span>
+                <span class="fw-bold" id="userName"></span>
                 with roles:
-                <span th:each="role : ${user.roles}" th:text="${role.getRoleName().replace('ROLE_', ' ')}"></span>
+                <span id="userRole"></span>
             </div>
             <div class="navbar-nav ms-auto mb-2 mb-lg-0">
                 <a style="color: #808080" th:href="@{/logout}" class="nav-link">Logout</a>
@@ -27,15 +27,17 @@
     <div class="row">
         <div class="col-2" style="padding: 15px 0 0;">
             <ul class="nav nav-pills flex-column">
-                <li class="nav-item" sec:authorize="hasRole('ROLE_USER')">
-                    <a class="nav-link active" th:href="@{/user}">User</a>
+                <li class="nav-item">
+                    <a class="nav-link active" href="#">User</a>
                 </li>
             </ul>
         </div>
+
         <div class="col-10 bg-light" style="padding: 15px 15px 15px;">
             <h1>User information-page </h1>
-            <div class="col-12 bg-light" style="padding: 15px 0 0;">
+            <div class="col-10 bg-light" style="padding: 15px 0 0;">
                 <div class="bg-light">About user</div>
+
                 <table class="table table-striped">
                     <thead>
                     <tr>
@@ -47,26 +49,18 @@
                         <th>Role</th>
                     </tr>
                     </thead>
-                    <tbody>
-                    <tr>
-                        <td th:text="${user.getId()}"></td>
-                        <td th:text="${user.getName()}"></td>
-                        <td th:text="${user.getSurname()}"></td>
-                        <td th:text="${user.getAge()}"></td>
-                        <td th:text="${user.getEmail()}"></td>
-                        <td>
-                            <span th:each="role : ${user.roles}"
-                                  th:text="${role.getRoleName().replace('ROLE_', ' ')}"></span>
-                        </td>
-                    </tr>
-                    </tbody>
+                    <tbody id="userInfo"></tbody>
                 </table>
             </div>
         </div>
     </div>
 </div>
+
+<script src="https://code.jquery.com/jquery-3.7.0.slim.min.js"
+        integrity="sha256-tG5mcZUtJsZvyKAxYLVXrmjKBVLd6VpVccqz/r4ypFE=" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
         crossorigin="anonymous"></script>
+<script src="/allRest.js"></script>
 </body>
 </html>
