--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -26,16 +26,17 @@
 <body>
 <div class="container-fluid">
     <div class="row">
-        <div class="col-2" style="padding: 15px 0 0;">
+        <div class="col-2" style="padding: 15px  0;">
             <div class="d-flex align-items-start">
                 <div class="nav flex-column nav-pills me-1" id="v-pills-tab" role="tablist" aria-orientation="vertical">
                     <button class="nav-link active" id="v-pills-home-tab" data-bs-toggle="pill"
                             data-bs-target="#v-pills-home" type="button" role="tab" aria-controls="v-pills-home"
-                            aria-selected="true">Admin
+                            aria-selected="true" style="min-width: 285%">Admin
                     </button>
+
                     <button class="nav-link" id="v-pills-profile-tab" data-bs-toggle="pill"
                             data-bs-target="#v-pills-profile" type="button" role="tab" aria-controls="v-pills-profile"
-                            aria-selected="false">User
+                            aria-selected="false" style="min-width: 285%">User
                     </button>
                 </div>
             </div>
