--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -1,66 +1,80 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org"
-      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity">
+<html lang="en">
 <head>
-    <title>User page</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <meta charset="UTF-8">
+    <title>Title</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 
-<nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #3C3F42">
-    <div class="container-fluid">
-        <div class="collapse navbar-collapse" id="navbarText">
-            <div class="p-3 mb-2 text-white col-10">
-                <span class="fw-bold" id="userName"></span>
-                with roles:
-                <span id="userRole"></span>
-            </div>
-            <div class="navbar-nav ms-auto mb-2 mb-lg-0">
-                <a style="color: #808080" th:href="@{/logout}" class="nav-link">Logout</a>
-            </div>
-        </div>
-    </div>
-</nav>
 
 <body>
-<div class="container-fluid">
+<!--Navbar-->
+<header>
+    <nav class="navbar navbar-dark bg-dark p-0 shadow ">
+        <div class="nav-item text-white px-3">
+            <span id="currentUserEmailNavbar"></span>
+        </div>
+        <ul class="navbar-nav">
+            <li class="nav-item text-nowrap">
+                <a class="nav-link px-3" href="/logout">Logout</a>
+            </li>
+        </ul>
+    </nav>
+</header>
+
+<div class="container-fluid mt-3 ">
+
+    <!--Sidebar-->
     <div class="row">
-        <div class="col-2" style="padding: 15px 0 0;">
-            <ul class="nav nav-pills flex-column">
-                <li class="nav-item">
-                    <a class="nav-link active" href="#">User</a>
-                </li>
-            </ul>
+        <div class="col-md-2 px-0">
+            <div class="d-flex flex-column flex-shrink-0 p-0 text-white">
+                <ul class="nav nav-pills flex-column">
+                    <li class="nav-item">
+                        <a href="#userInfo" data-bs-toggle="pill" class="nav-link active no-refresh" role="tab" aria-current="false">
+                            User
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
 
-        <div class="col-10 bg-light" style="padding: 15px 15px 15px;">
-            <h1>User information-page </h1>
-            <div class="col-12 bg-light" style="padding: 15px 0 0;">
-                <div class="bg-light">About user</div>
+        <div class="col-md-10 bg-light">
+            <div class="tab-content">
 
-                <table class="table table-striped">
-                    <thead>
-                    <tr>
-                        <th>ID</th>
-                        <th>First Name</th>
-                        <th>Last Name</th>
-                        <th>Age</th>
-                        <th>Email</th>
-                        <th>Role</th>
-                    </tr>
-                    </thead>
-                    <tbody id="userInfo"></tbody>
-                </table>
+                <!--CurrentUser info-->
+                <div class="tab-pane fade show active" id="userInfo" role="tabpanel">
+                    <div class="container-fluid">
+                        <h2>User Information Page</h2>
+                        <div class="card">
+                            <div class="container-fluid px-0 bg-light border">
+                                <h5 class="card-header">
+                                    About user</h5>
+                            </div>
+                            <div class="container-fluid mt-4">
+                                <div class="table-responsive">
+                                    <table class="table table-striped bg-white">
+                                        <thead>
+                                        <tr>
+                                            <th>ID</th>
+                                            <th>Name</th>
+                                            <th>Surname</th>
+                                            <th>Age</th>
+                                            <th>Email</th>
+                                            <th>Role</th>
+                                        </tr>
+                                        </thead>
+                                        <tbody id="currentUserTable">
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 </div>
-
-<script src="https://code.jquery.com/jquery-3.7.0.slim.min.js"
-        integrity="sha256-tG5mcZUtJsZvyKAxYLVXrmjKBVLd6VpVccqz/r4ypFE=" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-        crossorigin="anonymous"></script>
-<script src="/allRest.js"></script>
+<script src="/js/user.js"></script>
 </body>
 </html>
